@@ -49,7 +49,7 @@ a.country_code			{width:100%; height:100%; color:#fff; font-size:1.4em; line-hei
 a.country_code:hover	{background-color:rgba(37, 115, 205, 0.7);}
 
 
-/*	Read info style
+/*	Data Description styles
 	============================================= */
 .description			{width:960px; margin:0 auto; padding:40px 0; text-align:left;}
 .description span.title	{display:block; color:#fff; line-height:1.35em; font-size:1.4em; margin-top:20px; padding:10px 0; border-top:1px solid #fff; border-bottom:1px solid #fff;}
