@@ -325,7 +325,7 @@
 					<span class="title">What is it?</span>
 					<p><span class="bold">D-Portal</span> is a country-based information platform that tracks resource flows. It is aimed at providing line ministries, parliamentarians and civil society with information that can assist with the planning and monitoring of development activities.</p>
 					<p>In its first iteration it contains current data published through the International Aid Transparency Initiative (IATI) as well as the most recent (2012) data published by the OECD DAC Creditor Reporting System. Future development will include, inter alia, data from Aid Information Management Systems, national budgets and a range of comparable socio-economic indicators.</p>
-					<a href="/about.html#more" class="read">Read more</a>
+					<a href="/about.html" class="read">Read more</a>
 				</div>
 			</div>
 		</div>
