@@ -3,6 +3,7 @@ Development Portal (2014-03-26 shi)
 Remaining 34 background images uploaded
 Added first version of description on about / landing page
 Fixed footer bug for mobile devices
+Begin addition of "Workings out" footer - needs revision
 
 
 Development Portal (2014-03-25 shi)
